--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,13 @@
     "@emotion/styled": "^11.11.0",
     "@iconify/react": "^4.1.1",
     "@mui/x-data-grid": "^6.17.0",
+    "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.7",
     "framer-motion": "^10.16.4",
-    "gapi-script": "^1.2.0",
+    "jwt-decode": "^4.0.0",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
